--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "heroku": "^7.59.2",
     "nodemon": "^2.0.15",
-    "sweetalert2": "^11.1.10"
+    "sweetalert2": "^11.1.10",
+    "typed.js": "^2.0.12"
   }
 }
